--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preload" href="assets/css/style.css" as="style"/>
   <link rel="stylesheet" href="assets/css/style.css"/>
   <!-- Preload foto perfil -->
-  <link rel="preload" href="assets/img/logica-cero.png" as="image" imagesrcset="assets/img/logica-cero.jpg 1x"/>
+  <link rel="preload" href="assets/img/logica-cero.png" as="image" imagesrcset="assets/img/logica-cero.png 1x"/>
 </head>
 <body>
 <header class="site-header">
