--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <picture>
       <source srcset="assets/img/logica-cero.webp" type="image/webp"/>
       <source srcset="assets/img/logica-cero.png" type="image/png"/>
+      <source srcset="assets/img/logica-cero2.jpg" type="image/jpeg"/>
       <img
         src="assets/img/logica-cero.jpg"
         alt="Foto de perfil de Lógica Cero"
