--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <source srcset="assets/img/logica-cero.png" type="image/png"/>
       <source srcset="assets/img/logica-cero2.jpg" type="image/jpeg"/>
       <img
-        src="assets/img/logica-cero.jpg"
+        src="assets/img/logica-cero2.jpg"
         alt="Foto de perfil de Lógica Cero"
         class="avatar"
         loading="lazy"
