--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
   <h2>Génesis & Experiencia del Equipo</h2>
   <figure class="profile-card fade-in">
     <picture>
-      <source srcset="assets/img/logica-cero.webp" type="image/webp"/>
-      <source srcset="assets/img/logica-cero.png" type="image/png"/>
-      <source srcset="assets/img/logica-cero2.jpg" type="image/jpeg"/>
+      <source srcset="netflify/assets/img/logica-cero.webp" type="image/webp"/>
+      <source srcset="netflify/assets/img/logica-cero.png" type="image/png"/>
+      <source srcset="netflify/assets/img/logica-cero2.jpg" type="image/jpeg"/>
       <img
-        src="assets/img/logica-cero2.jpg"
+        src="netflify/assets/img/logica-cero2.jpg"
         alt="Foto de perfil de Lógica Cero"
         class="avatar"
         loading="lazy"
