--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <source srcset="assets/img/logica-cero.png" type="image/png"/>
             <source srcset="assets/img/logica-cero2.jpg" type="image/jpeg"/>
             <img
-              src="assets/img/logica-cero2.jpg"
+              src="netflify/assets/img/logica-cero2.jpg"
               alt="Lógica Cero — Fundador y Desarrollador Odoo"
               class="avatar"
               width="560"
