--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               loading="eager"
               fetchpriority="high"
               sizes="(max-width: 768px) 60vw, 320px"
-              onerror="this.onerror=null; this.src='assets/img/logica-cero.png';"
+              onerror="this.onerror=null; this.src='netflify/assets/img/logica-cero2.jpg';"
             />
           </picture>
           <figcaption>
