--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <source srcset="assets/img/logica-cero.png" type="image/png"/>
             <source srcset="assets/img/logica-cero2.jpg" type="image/jpeg"/>
             <img
-              src="netflify/assets/img/logica-cero2.jpg"
+              src="assets/img/logica-cero2.jpg"
               alt="Lógica Cero — Fundador y Desarrollador Odoo"
               class="avatar"
               width="560"
@@ -62,7 +62,7 @@
               loading="eager"
               fetchpriority="high"
               sizes="(max-width: 768px) 60vw, 320px"
-              onerror="this.onerror=null; this.src='netflify/assets/img/logica-cero2.jpg';"
+              onerror="this.onerror=null; this.src='assets/img/logica-cero.png';"
             />
           </picture>
           <figcaption>
